--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "seaborn >=0.11.2",
     "silx >=1.0.0",
     # Emulator training
-    "gpflow >=2.5.2",
+    # "gpflow >=2.5.2",
     "pymc >=4.0.0",
     "scikit-learn >=1.1.1",
     "emcee>=3.1.4",
